--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.cdnfonts.com/css/cathiren" rel="stylesheet">
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Whiskey Shit</title>
+    <title>Whiskey n' blues</title>
   </head>
   <body>
     <div id="root"></div>
